# smb-rs

./: Cargo.toml  LICENSE.md  README.md  dev.Dockerfile  docker-compose.yml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
crates/smb/: Cargo.toml
crates/smb-cli/: Cargo.toml
crates/smb-cli/src/: cli.rs  copy.rs  info.rs  lib.rs  main.rs  security.rs  watch.rs
crates/smb-direct/: Cargo.toml  README.md
crates/smb-direct/src/: lib.rs
crates/smb-dtyp/: Cargo.toml  README.md
crates/smb-dtyp/src/: binrw_util.rs  guid.rs  lib.rs  util.rs
crates/smb-dtyp/src/binrw_util/: boolean.rs  file_time.rs  fixed_string.rs  helpers.rs  multi_sz.rs  pos_marker.rs  sized_wide_string.rs
crates/smb-dtyp/src/security/: ace.rs  acl.rs  security_descriptor.rs  sid.rs  tests.rs
crates/smb-fscc/: Cargo.toml
crates/smb-fscc/src/: acces_masks.rs  chained_item.rs  chained_list.rs  common_info.rs  directory_info.rs  error.rs  file_attributes.rs  filesystem_info.rs  info_classes.rs  lib.rs  notify.rs  query_file_info.rs  quota.rs  set_file_info.rs
crates/smb-msg/: Cargo.toml  README.md
crates/smb-msg/src/: cancel.rs  compressed.rs  create.rs  dfsc.rs  echo.rs  encrypted.rs  error.rs  file.rs  header.rs  lib.rs  lock.rs  message.rs  negotiate.rs  netbios.rs  notify.rs  oplock.rs  plain.rs  query_dir.rs  session_setup.rs  smb1.rs  test.rs  tree_connect.rs
crates/smb-msg/src/info/: common.rs  query.rs  set.rs
crates/smb-msg/src/ioctl/: fsctl.rs  msg.rs
crates/smb-rpc/: Cargo.toml
crates/smb-rpc/src/: ndr64.rs  pdu.rs
crates/smb-rpc/src/interface/: srvsvc.rs
crates/smb-rpc/src/ndr64/: align.rs  arrays.rs  consts.rs  ptr.rs
crates/smb-tests/: Cargo.toml  README.md
crates/smb-tests/src/: binrw.rs  lib.rs
crates/smb-transport/: Cargo.toml  README.md  README.rdma.md
crates/smb-transport/scripts/: ksmbd.conf  ksmbd.sh  ksmbd_kill.sh
crates/smb-transport/src/: config.rs  error.rs  lib.rs  nb.rs  netbios.rs  quic.rs  rdma.rs  tcp.rs  traits.rs  utils.rs
crates/smb-transport/src/netbios/: msg.rs  transport.rs
crates/smb-transport/src/quic/: transport.rs
crates/smb-transport/src/rdma/: config.rs  error.rs  smbd.rs  transport.rs
crates/smb-transport/src/tcp/: msg.rs  transport.rs
crates/smb/docs/: parallelize.md  threading_models.md
crates/smb/src/: compression.rs  connection.rs  dialects.rs  docs.rs  error.rs  lib.rs  msg_handler.rs  resource.rs  session.rs  sync_helpers.rs  tree.rs  util.rs
crates/smb/src/client/: config.rs  smb_client.rs  unc_path.rs
crates/smb/src/connection/: config.rs  connection_info.rs  preauth_hash.rs  transformer.rs  transport.rs  worker.rs
crates/smb/src/connection/transport/: nb.rs  traits.rs
crates/smb/src/connection/worker/: parallel.rs  single_worker.rs  worker_trait.rs
crates/smb/src/connection/worker/parallel/: async_backend.rs  backend_trait.rs  base.rs  threading_backend.rs
crates/smb/src/crypto/: encryption.rs  kbkdf.rs  signing.rs
crates/smb/src/docs/: index.md  threading_models.md
crates/smb/src/packets/: fscc.rs
crates/smb/src/packets/binrw_util/: file_time.rs  pos_marker.rs
crates/smb/src/packets/fscc/: common_info.rs
crates/smb/src/packets/rpc/interface/: srvsvc.rs
crates/smb/src/packets/security/: security_descriptor.rs
crates/smb/src/packets/smb2/: create.rs  header.rs
crates/smb/src/packets/smb2/info/: query.rs
crates/smb/src/resource/: directory.rs  file.rs  file_util.rs  pipe.rs
crates/smb/src/session/: authenticator.rs  channel.rs  encryptor_decryptor.rs  setup.rs  signer.rs  sspi_network_client.rs  state.rs
crates/smb/src/tree/: ipc_tree.rs
crates/smb/src/util/: iovec.rs
crates/smb/tests/: basic.rs  closes.rs  common.rs  dialects.rs  info_query.rs  long_dir.rs  multichannel.rs  notify.rs
msrpc/: Cargo.toml
msrpc/src/: idl.pest  lib.rs  main.rs  pp.pest  preprocess.rs  util.rs
msrpc/test/: dcerpc.idl  msrpc.idl  temp.test.idl  test.idl
smb/: Cargo.toml
smb-cli/src/: cli.rs  copy.rs  info.rs  main.rs
smb/src/: connection.rs  docs.rs  error.rs  lib.rs  msg_handler.rs  packets.rs  resource.rs  session.rs  tree.rs
smb/src/client/: smb_client.rs  unc_path.rs
smb/src/connection/: config.rs  transport.rs
smb/src/connection/transport/: error.rs  netbios.rs  quic.rs  rdma.rs  tcp.rs  traits.rs  utils.rs
smb/src/connection/worker/parallel/: base.rs
smb/src/docs/: index.md  parallelize.md  threading_models.md
smb/src/packets/: dfsc.rs  smbd.rs
smb/src/packets/binrw_util/: sized_wide_string.rs
smb/src/packets/fscc/: chained_item.rs
smb/src/packets/rpc/ndr64/: ptr.rs
smb/src/packets/security/: ace.rs  acl.rs  security_descriptor.rs  sid.rs  tests.rs
smb/src/packets/smb2/: create.rs  file.rs  header.rs  negotiate.rs  session_setup.rs  tree_connect.rs
smb/src/packets/smb2/info/: query.rs  set.rs
smb/src/packets/smb2/ioctl/: fsctl.rs  msg.rs
smb/src/resource/: directory.rs  file.rs
smb/src/session/: sspi_network_client.rs
smb/src/tree/: dfs_tree.rs
smb/tests/: basic.rs  closes.rs  common.rs  dialects.rs  long_dir.rs  notify.rs  rpc.rs
smb/tests/scripts/: ksmbd.sh  ksmbd_kill.sh
