[package]
name = "smb-msg"
readme = "README.md"
description = "SMB Messages and structures for `smb-rs`"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
smb-dtyp = { path = "../smb-dtyp" }
smb-fscc = { path = "../smb-fscc" }

binrw = { workspace = true }
modular-bitfield = { workspace = true }
time = { workspace = true }
paste = { workspace = true }
thiserror = { workspace = true }
