[package]
name = "smb-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
smb-dtyp = { path = "../smb-dtyp" }

binrw = { workspace = true }
modular-bitfield = { workspace = true }
time = { workspace = true }
paste = { workspace = true }
maybe-async = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
is_sync = ["maybe-async/is_sync"]
