[package]
name = "smb-transport"
description = "SMB Transport implementations for `smb-rs`"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
smb-dtyp = { path = "../smb-dtyp" }
smb-msg = { path = "../smb-msg", optional = true }

log = { workspace = true }
tokio = { workspace = true, features = [
    "net",
    "macros",
    "io-util",
], optional = true }
tokio-util = { workspace = true, optional = true }
futures-core = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }

# QUIC
quinn = { workspace = true, optional = true }
rustls = { workspace = true, default-features = false, optional = true }
rustls-platform-verifier = { workspace = true, default-features = false, optional = true }

# RDMA
async-rdma = { git = "https://github.com/AvivNaaman/async-rdma.git", rev = "878828dd", features = [
    "cm",
    "raw",
], optional = true }

binrw = { workspace = true }
modular-bitfield = { workspace = true }
time = { workspace = true }
paste = { workspace = true }
maybe-async = { workspace = true }
thiserror = { workspace = true }

[features]
default = ["netbios"]
async = ["tokio", "tokio-util", "futures-core", "futures-util"]
is_sync = ["maybe-async/is_sync"]

netbios = []
quic = ["dep:quinn", "dep:rustls", "dep:rustls-platform-verifier"]
rdma = ["dep:smb-msg", "dep:async-rdma"]
